Fixed z-index issue (#218)
* Fixed z-index issue

smartcitiesdata/discovery-ui#161


* Cleaned up useless import

smartcitiesdata/discovery-ui#161

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,6 +2,8 @@ header {
   background-color: white;
   padding: 0;
   z-index: 100;
+  position: relative;
+  margin-bottom: 75px;
 
   a {
     text-decoration: none;
